Updating JVM and adding new connector configs